add exercise.instructions_file to templates that were missing it

--- a/access/templates/access/accept_general_default.html
+++ b/access/templates/access/accept_general_default.html
@@ -8,6 +8,11 @@
 <div class="instructions">
   {{ exercise.instructions|safe }}
 </div>
+  {% if exercise.instructions_file %}
+    {% include exercise.instructions_file %}
+  {% endif %}
+{% elif exercise.instructions_file %}
+    {% include exercise.instructions_file %}
 {% else %}
 <h1>{% trans "Enter your submission" %}</h1>
 {% endif %}
