--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -36,6 +36,9 @@
   {{ exercise.instructions|safe }}
 </div>
 {% endif %}
+{% if exercise.instructions_file %}
+  {% include exercise.instructions_file %}
+{% endif %}
 
 {% include 'access/graded_form.html' %}
 
