Add lang field to GradedForm
and add a special case for hidden fields in graded_form.html.
Get language from POST if available.

This handles the language mismatch bug in every case that applies to O1,
except for the piazza exercise. Because whether A+ loads the previous submission
is decided by the course material and not grader, it is almost impossible to
fix the bug in general.

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -8,6 +8,8 @@
 
 		{% if field.field.type == "static" %}
 		{{ field.field.more|safe }}
+		{% elif field.field.type == "hidden" %}
+			{{ field }}
 		{% else %}
 
 		{% if not field.field.row_label or field.field.open_table %}
