Modify grading of checkbox questions in questionnaires (#42)
Add partial points option to the checkbox questions. When set,
the student is rewarded with some points for partially correct
answers. Choosing half of the correct choises grants 0 points and
points increase linearly when more correct choices are made.

Change the grading semantics when no correct options are set
in a checkbox question. This is a backwards incompatible change,
but it should not cause issues since real exercises are expected
to define correct options. Previously, when no correct options
were defined, any answer was granted points for the question.
Now, only an empty answer receives points. The idea is that
if there are no correct options, then the correct answer is to
select nothing. Feedback and enrollment questionnaires are
handled differently so that they always grant full points
even if no correct options are set.

Add neutral options to checkbox questions. Neutral options do not
affect the grading. The student may select them or leave them
unselected.

Feedback and enrollment questionnaires always grant full points.
The correct answers need not be defined in the configuration.

Co-authored-by: Markku Riekkinen <markku.riekkinen@aalto.fi>

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -28,7 +28,9 @@
 			{% if not field.field.group_errors %}
 			{% if result.accepted %}
 				{% if not exercise.feedback or field.field.points > 0 %}
-				<span class="badge badge-{% if field.field.name in result.error_fields %}danger{% else %}success{% endif %}">{{ field.field.grade_points }} / {{ field.field.max_points }}</span>
+				<span class="badge badge-{% if field.field.grade_points > 0 and field.field.grade_points < field.field.max_points %}warning{% elif field.field.name in result.error_fields %}danger{% else %}success{% endif %}">
+					{{ field.field.grade_points }} / {{ field.field.max_points }}
+				</span>
 					{% if field.field.max_points == 0 %}
 					<span class="sr-only">
 					{% if field.field.name in result.error_fields %}
