Add randomized checkbox questions and fix pick_randomly (#44)
Add randomized and correct_count options to checkbox questions.
Checkbox questions can randomly select a subset of the answer
choices that are shown to the user at a time. The random
selection changes after each submission, but it does not
change if the user simply reloads the web page.

Fix issues with the pick_randomly option of questionnaires.
The randomly selected questions no longer change when the user
reloads the page.

Questions are numerated automatically when the question title
contains the substring {#}. This is useful for the pick_randomly
option since the order of the questions is not known beforehand.

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -155,6 +155,11 @@
 	{% if field.field.close_set %}
 	</fieldset>
 	{% endif %}
+	{% if field.field.randomized %}
+	<input type="hidden" name="{{ field.field.name }}_nonce" value="{{ field.field.random_nonce }}" />
+	<input type="hidden" name="{{ field.field.name }}_sample" value="{{ field.field.random_sample }}" />
+	<input type="hidden" name="{{ field.field.name }}_checksum" value="{{ field.field.random_checksum }}" />
+	{% endif %}
 	{% endfor %}
 
 	{% if post_url or not result.accepted %}
