Fix issues in random questions and update README (#44)
MOOC-grader gives a clear rejected feedback to A+ when the random
checksums are invalid in the submission. Previously, A+ showed
a generic error even though there is no error in the grader.

Used nonces are saved in random checkbox questions. This is
needed in order to prevent users from reusing previous nonces.
Reusing old nonces and checksums would enable users to answer
old questions even though the questions are supposed to change
randomly.

The current_sample function used to randomly select questions
now uses a separate random number generator so that the
deterministically set seed does not interfere with other uses
of the random module.

The question form is now always disabled in the feedback for
random checkbox questions. Previously, it was sometimes enabled
even though the submit button was not rendered.

Random checkbox questions do not generate a new nonce value for
the feedback HTML since the feedback form is disabled and can not
be submitted. The nonce and checksum are not included in the
feedback HTML at all when the form is accepted for grading.

current_sample: the randomly generated sample of question indexes
is not sorted so that the questions can be shown in any random
order. The correct choices in random checkbox questions are not
always listed before the incorrect choices; instead, the order
of the choices is random.

The seed is now based on the exercise and question keys in
addition to the user IDs and the submission ordinal number.
Thus, if the the same exercise is defined multiple times in the
chapter, the random choice of questions is different for each
exercise. Previously, each exercise made the same identical
random sample.

Nonces are generated deterministically for random questionnaires.
If the exercise is reloaded, then the nonce does not change.
The randomly selected questions do not change either.
If the nonce changed, then the student could gather multiple nonces
for the same 

--- a/access/templates/access/exercise_frame.html
+++ b/access/templates/access/exercise_frame.html
@@ -12,11 +12,10 @@
 	<h3 class="exercise-title">{{ exercise.title }}</h3>
 	{% endif %}
 
-	{% if result.error %}
-	<div class="alert alert-danger">
+	{% if result.error or result.rejected %}
 
 		{% if result.missing_files %}
-		<p>
+		<div class="alert alert-danger">
 		{% if exercise.required_number_of_files %}
 			{% blocktrans count num_files=exercise.required_number_of_files %}
 			You must submit {{ num_files }} file.
@@ -26,26 +25,39 @@
 		{% else %}
 			{% trans "Every file is required for a submission." %}
 		{% endif %}
-		</p>
+		</div>
 		{% endif %}
 
 		{% if result.missing_file_name %}
-		<p>{% trans "Unknown file received (no file name configured)." %}</p>
+		<div class="alert alert-danger">
+		{% trans "Unknown file received (no file name configured)." %}
+		</div>
 		{% endif %}
 
 		{% if result.invalid_address %}
-		<p>{% trans "Invalid address entered." %}</p>
+		<div class="alert alert-danger">
+		{% trans "Invalid address entered." %}
+		</div>
 		{% endif %}
 
 		{% if result.nonce_used %}
-		<p>{% trans "The same form can obly be submitted once. Start again from exercise description." %}</p>
+		<div class="alert alert-danger">
+		{% trans "The same form can only be submitted once. Start again from the exercise description." %}
+		</div>
 		{% endif %}
 
 		{% if result.fields %}
-		<p>{% trans "Missing required fields." %}</p>
+		<div class="alert alert-danger">
+		{% trans "Missing required fields." %}
+		</div>
 		{% endif %}
 
-	</div>
+		{% if result.invalid_checksum %}
+		<div class="alert alert-danger">
+		{% trans "Missing or invalid checksum. Do not tamper with the hidden form fields!" %}
+		</div>
+		{% endif %}
+
 	{% endif %}
 
 	{% block exercise %}
