Remove nonces from random questionnaires
Nonces are not needed because the grader now computes the random sample of
questions deterministically in the server. Since the grader does not use
the sample data from the submission data anymore, there is no need to protect
against replay attacks and the nonces are unnecessary.

The sample is still stored in the hidden HTML form field and the submission
data for debugging purposes.

If a random questionnaire is modified after students have submitted to it,
the grader could compute different random samples after the modification
because the random seed depends on the number of available questions.
It is recommended that random questionnaires are not modified after releasing
them to the students.

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -156,7 +156,6 @@
 	</fieldset>
 	{% endif %}
 	{% if field.field.randomized and not result.accepted %}
-	<input type="hidden" name="{{ field.field.name }}_nonce" value="{{ field.field.random_nonce }}" />
 	<input type="hidden" name="{{ field.field.name }}_sample" value="{{ field.field.random_sample }}" />
 	<input type="hidden" name="{{ field.field.name }}_checksum" value="{{ field.field.random_checksum }}" />
 	{% endif %}
@@ -164,8 +163,7 @@
 
 	{% if post_url or not result.accepted %}
 	<div class="form-group">
-		{% if result.form.nonce or result.form.sample or result.form.checksum %}
-		<input type="hidden" name="_nonce" value="{{ result.form.nonce }}" />
+		{% if result.form.sample or result.form.checksum %}
 		<input type="hidden" name="_sample" value="{{ result.form.sample }}" />
 		<input type="hidden" name="_checksum" value="{{ result.form.checksum }}" />
 		{% endif %}
