Neutral choices are marked with question mark in the model (#51)
If model solution is to be shown in the last submission feedback,
the neutral choices are now marked with the question mark.
NB: The model solution in the show model button shows neutral
choices as wrong.

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -107,6 +107,8 @@
 				<label>
 					{% if choice.choice_value in field.field.correct %}
 					<span data-aplus-once="yes" class="correct-option glyphicon glyphicon-ok" aria-hidden="true"></span>
+					{% elif choice.choice_value in field.field.neutral %}
+					<span data-aplus-once="yes" class="neutral-option glyphicon glyphicon-question-sign" aria-hidden="true"></span>
 					{% endif %}
 					{{ choice.tag }}
 					{{ choice.choice_label|safe }}
