--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -1,5 +1,6 @@
 {% load i18n %}
-<form method="post" action="{{ post_url }}"{% if result.form.multipart %} enctype="multipart/form-data"{% endif %}>
+<form id="exercise-{{ result.form.form_random_id }}-form" data-form-nonce="{{ result.form.form_random_id }}"
+	method="post" action="{{ post_url }}"{% if result.form.multipart %} enctype="multipart/form-data"{% endif %}>
 	{% for field in result.form %}
 	{% if field.field.open_set %}
 	<fieldset id="{{ field.field.open_set }}"{% if result.accepted and field.field.group_errors %} class="alert {% if field.field.open_set in result.error_groups %}alert-danger{% else %}alert-success{% endif %}"{% endif %}>
@@ -163,7 +164,6 @@
 	{% endif %}
 	{% endfor %}
 
-	{% if post_url or not result.accepted %}
 	<div class="form-group">
 		{% if result.form.sample or result.form.checksum %}
 		<input type="hidden" name="_sample" value="{{ result.form.sample }}" />
@@ -173,5 +173,4 @@
 		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
 		{% endif %}
 	</div>
-	{% endif %}
 </form>
