Change how course and exercise language variables are stored
* Ensure that `course['lang']` is always the default lang
* Ensure that `course['language']` is always a list of languages
* Update different locations to use all languages of an exercise,
  when specific language is not known
* Show all course languages in the index/course list
* Include links to all exercise language variants in the the exercise list
* Update JSON exports for index and exercise list outputs.

Breaking changes:

* In JSON export of the exercise list, the `title` is an object now

--- a/templates/grader_frame.html
+++ b/templates/grader_frame.html
@@ -1,5 +1,5 @@
 {% extends 'frame.html' %}
 
 {% block head %}
-<title>{% block title %}mooc-grader{% endblock %}</title>
+<title>{% block title %}MOOC-Grader{% endblock %}</title>
 {% endblock %}
