--- a/access/templates/access/course.html
+++ b/access/templates/access/course.html
@@ -1,11 +1,15 @@
 {% extends 'grader_frame.html' %}
 {% load i18n %}
 
-{% block title %}mooc-grader :: {{ course.name }}{% endblock %}
+{% block title %}{{ course.name }} | {{ block.super }}{% endblock %}
 
 {% block body %}
 <div class="page-header">
 	<h1>{{ course.name }}</h1>
+	<a href="{% url 'index' %}" class="btn btn-sm btn-default">
+		<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+		{% trans "Back to the course list" %}
+	</a>
 </div>
 <h3>{% trans "Service URLs for A+" %}</h3>
 <table class="table">
@@ -33,9 +37,21 @@
 <h3>{% trans "Available exercises" %}</h3>
 <div class="list-group">
 	{% for exercise in exercises %}
-	<a href="{% url 'exercise' course.key exercise.key %}" class="list-group-item">
-		{{ exercise.title }}
-	</a>
+		{% if False and exercise|length == 1 %}
+			{% for lang, exercise in exercise.items %}
+				<a href="{% url 'exercise' course.key exercise.key %}?lang={{ lang }}" class="list-group-item">
+					{{ exercise.title }}
+				</a>
+			{% endfor %}
+		{% else %}
+			{% for lang, exercise in exercise.items %}
+			<a href="{% url 'exercise' course.key exercise.key %}?lang={{ lang }}" class="list-group-item" {% if not forloop.first %}style="border-top: 0;"{% endif %}>
+					{{ exercise.title }}
+					<span class="badge progress-bar-{% if forloop.counter0|divisibleby:"2" %}success{% else %}info{% endif %}">{{ lang|upper }}</span>
+				</a>
+			{% endfor %}
+		{% endif %}
+		{# resetcycle #}
 	{% endfor %}
 </div>
 {% endblock %}
