--- a/access/templates/access/ready.html
+++ b/access/templates/access/ready.html
@@ -15,9 +15,35 @@
 <h3>{% trans "Available courses" %}</h3>
 <div class="list-group">
 	{% for course in courses %}
-	<a href="{% url 'course' course.key %}" class="list-group-item">
-		{{ course.name }}
-	</a>
+		{% if course.languages|length > 1 %}
+			{% for lang, name in course.name.items %}
+				<a href="{% url 'course' course.key %}" class="list-group-item" {% if not forloop.first %}style="border-top: 0;"{% endif %}>
+					{{ name }}
+					<span class="badge progress-bar-{% if forloop.counter0|divisibleby:"2" %}success{% else %}info{% endif %}">
+						{% if lang == course.languages.0 %}<span class="glyphicon glyphicon-star" aria-label="default langauge"></span>{% endif %}
+						{{ lang|upper }}
+					</span>
+				</a>
+			{% empty %}
+				<a href="{% url 'course' course.key %}" class="list-group-item">
+					{{ course.name }}
+					{% for lang in course.languages reversed %}
+						<span class="badge progress-bar-{% if forloop.counter|divisibleby:"2" %}success{% else %}info{% endif %}">
+							{% if forloop.last %}<span class="glyphicon glyphicon-star" aria-label="default langauge"></span>{% endif %}
+							{{ lang|upper }}
+						</span>
+					{% endfor %}
+				</a>
+			{% endfor %}
+		{% else %}
+			<a href="{% url 'course' course.key %}" class="list-group-item">
+				{{ course.name }}
+				<span class="badge progress-bar-success">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					{{ course.languages.0|upper }}
+				</span>
+			</a>
+		{% endif %}
 	{% endfor %}
 </ul>
 {% endblock %}
