--- a/templates/frame.html
+++ b/templates/frame.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="container-fluid">
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 				{% block body %}
 				{% endblock %}
 			</div>
