Add identifying classes to exercises and questionnaires
A versioned class has been added to the
entire exercise-frame and in addition to the
graded quiz-form so that those can be targeted
better within A+.

--- a/access/templates/access/exercise_frame.html
+++ b/access/templates/access/exercise_frame.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-<div id="exercise">
+<div id="exercise" class="exercise exercise-mooc-grader-v1">
 
 	{% if exercise.title %}
 	<h3 class="exercise-title">{{ exercise.title }}</h3>
