Separate validation errors from wrong answers in questionnaire
- Validation errors (field.errors) have been separated into
their own file so that they can be easily applied elsewhere.
- The file takes into account the different way table-typed
questions print their field errors.
- Question-labels have their ids and classes now in place so that
validation errors can be highlighted and accessibility is improved
- Validation errors are shown with the bootstrap "has-error"-class
which can be implemented elsewhere then as well.
https://getbootstrap.com/docs/3.4/css/#forms-control-validation

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -14,16 +14,16 @@
 		{% else %}
 
 		{% if not field.field.row_label or field.field.open_table %}
-		<div class="{{ field.field.html_class }} {% if field.errors %} has-error{% elif not field.field.group_errors and field.field.name in result.error_fields %} has-error{% endif %}">
+		<div class="{{ field.field.html_class }} {% if field.errors %} has-error{% endif %}">
 
 			{% if field.field.required %}<span class="required">*</span>{% endif %}
 
 			{% if field.label %}
-			{% if field.field.choice_list %}
-			<label>{{ field.label }}</label>
-			{% else %}
-			{{ field.label_tag }}
-			{% endif %}
+				{% if field.field.choice_list %}
+					<label class="control-label">{{ field.label }}</label>
+				{% else %}
+					<label class="control-label">{{ field.label_tag }}</label>
+				{% endif %}
 			{% endif %}
 
 			{% if not field.field.group_errors %}
@@ -89,14 +89,7 @@
 			{% endif %}
 
 			{% if field.errors %}
-			<tr>
-				<td>&nbsp;</td>
-				<td colspan="{{ field|length }}">
-					<div class="alert alert-danger">
-						{{ field.errors|safe }}
-					</div>
-				</td>
-			</tr>
+				{% include "access/field_errors.html" with errors=field.errors type="table" %}
 			{% endif %}
 			{% if field.field.close_table %}
 			</table>
@@ -128,18 +121,14 @@
 			</div>
 			{% endfor %}
 			{% if field.errors %}
-			<div class="alert alert-danger">
-				{{ field.errors|safe }}
-			</div>
+				{% include "access/field_errors.html" with errors=field.errors %}
 			{% endif %}
 
 			{% else %}
 			{{ field }}
 
 			{% if field.errors %}
-			<div class="alert alert-danger">
-				{{ field.errors|safe }}
-			</div>
+				{% include "access/field_errors.html" with errors=field.errors %}
 			{% endif %}
 
 			{% if field.field.correct %}
