--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -3,32 +3,10 @@
 
 {% block exercise %}
 
-{% if result.accepted %}
-<div class="alert {% if result.error_fields %}alert-danger{% else %}alert-success{% endif %}">
-<p>
-    {% if exercise.accepted_message %}
-    {{ exercise.accepted_message|safe }}
-    {% else %}
-    {% blocktrans with points=result.points max_points=exercise.max_points %}
-    You got {{ points }}/{{ max_points }} points from this questionnaire.
-    {% endblocktrans %}
-    {% endif %}
-</p>
-<p>
-    {% if result.form.group_errors %}
-    {% blocktrans %}
-    Note that the whole section of questions is marked as being incorrect if
-    one of the questions in that section is incorrect.
-    {% endblocktrans %}
-    {% endif %}
-    {% if not result.form.disabled and result.points < exercise.max_points %}
-    {% blocktrans %}
-    You can change your answers and submit them for regrading.
-    However, notice the number of allowed submissions left!
-    {% endblocktrans %}
-    {% endif %}
-</p>
-</div>
+{% if result.accepted and exercise.accepted_message %}
+  <div class="alert alert-default">
+    <p>{{ exercise.accepted_message|safe }}</p>
+  </div>
 {% endif %}
 
 {% if exercise.instructions %}
