Remove Bootstrap-alert from questionnaire form group_errors
Previously if some fields in the questionnaire
were set to be hidden in the configurations,
the whole fieldset (whole form) was wrapped in a bootstrap alert.
This removes that alert.

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -10,7 +10,7 @@
 
 	{% if field.field.open_set %}
 	<!-- Beginning of all questions -->
-		<fieldset id="{{ field.field.open_set }}"{% if result.accepted and field.field.group_errors %} class="alert {% if field.field.open_set in result.error_groups %}alert-danger{% else %}alert-success{% endif %}"{% endif %}>
+		<fieldset id="{{ field.field.open_set }}">
 		{% if field.field.set_title %}<legend>{{ field.field.set_title }}</legend>{% endif %}
 	{% endif %}
 
