Rename questionnaire form attributes for correct answers
The names of "reveal model at max submissions" and "model answer"
were very close to each other in the questionnaire-form code.

They have now been renamed for clarity, and so that they are closer
to the names in the configuration
https://github.com/apluslms/mooc-grader/tree/master/courses#accesstypesstdsynccreateform

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -161,7 +161,7 @@
 			<!-- End of a text-field -->
 			{% endif %}
 
-		{% if result.accepted and not result.form.show_correct and not field.field.row_label or field.field.close_table %}
+		{% if result.accepted and not result.model_answer and not field.field.row_label or field.field.close_table %}
 			<!-- Question feedback -->
 			<div>
 				{% if field.field.type == "checkbox" %}
