--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -126,11 +126,15 @@
 					{{ choice.choice_label|safe }}
 				</label>
 				{% if result.form.reveal_correct or result.model_answer %}
-					{# Indicating the correct and neutral answers and hiding hints, if the form is a model answer #}
+					{# Indicating the correct and neutral options and hiding hints, if the form is a model answer #}
 					{% if choice.choice_value in field.field.correct and not field.field.answer_correct %}
 						<i data-aplus-once="yes" class="quiz1-icon-correct" aria-hidden="true"></i>
 					{% elif choice.choice_value in field.field.neutral %}
-						<i data-aplus-once="yes" class="quiz1-icon-neutral" aria-hidden="true"></i>
+						{% if result.model_answer %}
+							<span><em>**{% trans "neutral option which does not affect grading"%}**</em></span>
+						{% elif result.form.reveal_correct and not field.field.answer_correct %}
+							<i data-aplus-once="yes" class="quiz1-icon-neutral" aria-hidden="true"></i>
+						{% endif %}
 					{% endif %}
 					{# end of correct answer #}
 				{% else %}
