--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -13,7 +13,7 @@
 			<p>{{ exercise.accepted_message|safe }}</p>
 		{% endif %}
 		<p>
-			{% blocktrans %}
+			{% blocktrans trimmed %}
 				The whole section within the black line is marked as being
 				incorrect, if one of the questions incorrect.
 			{% endblocktrans %}
