Add mention of the group_errors to the questionnaire
In case there is a question group defined within the
questionnaire configuration, and one of the questions within
that group is wrong, the whole group is marked as being
incorrect and that is being indicated to the student.

--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -7,6 +7,18 @@
 	<div class="alert alert-default">
 		<p>{{ exercise.accepted_message|safe }}</p>
 	</div>
+{% elif result.accepted and result.form.group_errors %}
+	<div class="alert alert-default">
+		{% if exercise.accepted_message|safe %}
+			<p>{{ exercise.accepted_message|safe }}</p>
+		{% endif %}
+		<p>
+			{% blocktrans %}
+				The whole section within the black line is marked as being
+				incorrect, if one of the questions incorrect.
+			{% endblocktrans %}
+		</p>
+	</div>
 {% elif result.form.errors %}
 	{% include "access/_error_summary.html" %}
 {% endif %}
