Change style of list-items in error summary
Changes the style of the items in the error summary,
adds emphasis on the field label, and presents the errors
as ul-element, instead of individual p-elements.

--- a/access/templates/access/_error_summary.html
+++ b/access/templates/access/_error_summary.html
@@ -5,14 +5,17 @@
 	<div class="error-summary__text">
 		<h4>{% trans "Submission failed" %}</h4>
 		<p>{% trans "Check your answers before trying again:" %}</p>
+		<ul>
 		{% for field in result.form %}
 			{% if field.errors %}
-				<p>{{ field.label }}:
-				{% for error in field.errors %}
-					{{ error }}
-				{% endfor %}
-				</p>
+				<li>
+					<strong>{{ field.label }}: </strong>
+					{% for error in field.errors %}
+						{{ error }}
+					{% endfor %}
+				</li>		
 			{% endif %}
 		{% endfor %}
+		</ul>
 	</div>
 </div>
