Change the title "Submission accepted" to "Submission received"
The async_accepted.html template is used when a submission is
submitted for asynchronous grading and the grading is going to
be started.

The message "submission accepted" was a little misleading in
the sense that it may make the user think that the submission
is graded with acceptable points, but now it only means that
the submission has been received and will be graded soon.

In addition, add a comment to the message that the user may close
the modal dialog. The user need not wait and stare at the modal
dialog while the submission is being graded. In some courses,
especially in Scala courses, the grading usually takes over one
minute and the user may think it is necessary to wait a minute
in the modal dialog before they can move on. The modal dialog
polls for the feedback for one minute and then informs the user
that the grading takes longer than that.

--- a/access/templates/access/async_accepted.html
+++ b/access/templates/access/async_accepted.html
@@ -24,7 +24,7 @@
 </div>
 
 {% else %}
-<h1>{% trans "Submission accepted" %}</h1>
+<h1>{% trans "Submission received" %}</h1>
 
 {% if result.missing_url %}
 <div class="alert alert-danger">
@@ -41,13 +41,14 @@
 		{% if exercise.accepted_message %}
 		{{ exercise.accepted_message|safe }}
 		{% elif result.queue < 3 %}
-		{% blocktrans %}
+		{% blocktrans trimmed %}
 		Your submission is being graded. The result will be available on this page
-		when the grading process completes. Note that grading may take a while.
+		when the grading process completes. Note that the grading may take a while.
 		You might also need to update the page manually in order to see the results.
+		You may close this message.
 		{% endblocktrans %}
 		{% else %}
-		{% blocktrans with queue=result.queue %}
+		{% blocktrans with queue=result.queue trimmed %}
 		Your submission is in the grading queue. There are {{ queue }} other
 		submissions before. The result will be available on this page
 		when the grading process completes. The page must be updated manually to
