Remove duplicate label HTML tag
Fixes #97

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -32,7 +32,7 @@
 				{% if field.field.choice_list %}
 					<label class="control-label">{{ field.label }}</label>
 				{% else %}
-					<label class="control-label">{{ field.label_tag }}</label>
+					{{ field.label_tag }}
 				{% endif %}
 			{% endif %}
 
