Connect question label to the input
For multiple-choice questions, the label of the choice was not connected
to the input element (checkbox or radio button). Because of this,
clicking the label would not activate the input element. This commit
fixes the issue by ensuring that the label's `for` attribute matches the
input element's `id` attribute.

Fixes #107

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -121,7 +121,7 @@
 			<!-- An input-field: Checkbox- or radio-field -->
 			{% for choice in field %}
 			<div class="{{ field.field.type }}">
-				<label for="{{ choice.id_for_label }}" class="{% if choice.choice_value in choice.value %}option-checked{% endif %}">
+				<label for="{{ choice.data.attrs.id }}" class="{% if choice.choice_value in choice.value %}option-checked{% endif %}">
 					{{ choice.tag }}
 					{{ choice.choice_label|safe }}
 				</label>
