Fix checkbox hints for Django 2.2
The upgrade to Django 2.2 caused checkbox-based exercises to no longer
display all hints. This is because before the upgrade, iterating over
the BoundField would yield CheckboxChoiceInput instances, and the
graded_form template rendering relied on two attributes that were
available in that class (value and choice_value). In Django 2.2, the
iteration yields BoundWidget instances, which don't have the previously
used attributes. This commit updates the template to use attributes that
are compatible with Django 2.2, and reverts a previous change to
find_common_hints, as it is no longer necessary.

Fixes #110

--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -121,15 +121,15 @@
 			<!-- An input-field: Checkbox- or radio-field -->
 			{% for choice in field %}
 			<div class="{{ field.field.type }}">
-				<label for="{{ choice.data.attrs.id }}" class="{% if choice.choice_value in choice.value %}option-checked{% endif %}">
+				<label for="{{ choice.data.attrs.id }}" class="{% if choice.data.value in field.value %}option-checked{% endif %}">
 					{{ choice.tag }}
 					<span>{{ choice.choice_label|safe }}</span>
 				</label>
 				{% if result.form.reveal_correct or result.model_answer %}
 					{# Indicating the correct and neutral options and hiding hints, if the form is a model answer #}
-					{% if choice.choice_value in field.field.correct and not field.field.answer_correct %}
+					{% if choice.data.value in field.field.correct and not field.field.answer_correct %}
 						<i data-aplus-once="yes" class="quiz1-icon-correct" aria-hidden="true"></i>
-					{% elif choice.choice_value in field.field.neutral %}
+					{% elif choice.data.value in field.field.neutral %}
 						{% if result.model_answer %}
 							<span><em>**{% trans "neutral option which does not affect grading"%}**</em></span>
 						{% elif result.form.reveal_correct and not field.field.answer_correct %}
@@ -138,9 +138,9 @@
 					{% endif %}
 					{# end of correct answer #}
 				{% else %}
-					{% if field.field.type == "checkbox" and choice.choice_value in choice.value and field.field.hints %}
+					{% if field.field.type == "checkbox" and choice.data.value in field.value and field.field.hints %}
 						<div>
-							{% with hint=field.field.hints|find_checkbox_hints:choice.choice_value %}
+							{% with hint=field.field.hints|find_checkbox_hints:choice.data.value %}
 								{% if hint %}
 									<p class="question-hint hint-checkbox">
 										{{ hint|safe }}
