Ensure unique IDs in exercise forms
Some exercise types (acceptPost, acceptFiles, acceptGeneralForm) used
field names directly as HTML input element IDs. This was problematic
when multiple exercises were displayed on the same page in A+, and some
exercises used some identical field names. This caused duplicate IDs,
which is invalid HTML. This commit fixes the issue be prefixing the IDs
with a random component, e.g. "exercise-XXXXXXXX-field1". This format is
consistent with the one used in GradedForm.

Fixes #111

--- a/access/templates/access/accept_files_form.html
+++ b/access/templates/access/accept_files_form.html
@@ -11,12 +11,17 @@
 
 	{% for entry in exercise.files %}
 	<div class="form-group">
-		<label for="{{ entry.field }}_id">
+		<label for="exercise-{{ unique_id }}-{{ entry.field }}">
 			<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
 			{{ entry.name }}
 		</label>
-		<input type="file" id="{{ entry.field }}_id" name="{{ entry.field }}" class="form-control"
-			{% if entry.required or entry.required == None %}required{% endif %}/>
+		<input
+			type="file"
+			id="exercise-{{ unique_id }}-{{ entry.field }}"
+			name="{{ entry.field }}"
+			class="form-control"
+			{% if entry.required or entry.required == None %}required{% endif %}
+		/>
 	</div>
 	{% endfor %}
 	{% if post_url or not result.accepted %}
