--- a/access/templates/access/accept_post_form.html
+++ b/access/templates/access/accept_post_form.html
@@ -3,13 +3,18 @@
 <form method="post" action="{{ post_url }}">
 	{% for entry in result.fields %}
 	<div class="form-group{% if entry.missing %} has-error{% endif %}">
-		<label for="{{ entry.name }}_id" class="control-label">
+		<label for="exercise-{{ unique_id }}-{{ entry.name }}" class="control-label">
 			{{ entry.title|safe }}
 		</label>
 		{% if entry.more %}
 		{{ entry.more|safe }}
 		{% endif %}
-		<textarea id="{{ entry.name }}_id" name="{{ entry.name }}" class="form-control" rows="{% if entry.rows %}{{ entry.rows }}{% else %}6{% endif %}"></textarea>
+		<textarea
+			id="exercise-{{ unique_id }}-{{ entry.name }}"
+			name="{{ entry.name }}"
+			class="form-control"
+			rows="{% if entry.rows %}{{ entry.rows }}{% else %}6{% endif %}"
+		></textarea>
 	</div>
 	{% endfor %}
 	{% if post_url or not result.accepted %}
